Adicionado parte do lançamento

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,11 @@
 mensagem.invalida=Mensagem inv\u00Eilida
 
 categoria.nome=Nome
+lancamento.pessoa=Pessoa
+
+https://www.youtube.com/watch?v=uCfTsR3U34Y
+https://www.youtube.com/watch?v=PuS98huNT24
+https://www.youtube.com/watch?v=WgkZa0ne6Es
+https://www.youtube.com/watch?v=35epZPmJijY
+https://www.youtube.com/watch?v=dfDy5OQf4FY
+https://www.youtube.com/watch?v=Q6nLvXnI1uM
